--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ body {
   height: 100%;
   margin: 0;
 }
+.center {
+  margin: auto;
+  width: 50%;
+  border: 10px;
+  padding: 10px;
+}
+.center {
+  text-align: center;
+}
